Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
float sg_Core_SaturationOf(unsigned int c);
int sg_Core_ScreenHeight();
int sg_Core_ScreenWidth();
void sg_Core_SetIcon(char *filename);
void sg_Core_SwinGameVersion(char *result);
void sg_Core_TakeScreenshot(char *basename);
void sg_Core_ToggleFullScreen();
void sg_Core_ToggleWindowBorder();
unsigned char sg_Core_TransparencyOf(unsigned int c);
int sg_Core_WindowCloseRequested();
vector sg_Geometry_AddVectors(vector *v1, vector *v2);
void sg_Geometry_ApplyMatrix(matrix2d m, triangle tri);
void sg_Geometry_ApplyMatrixToPoints(matrix2d m, point2d *pts, int pts_len);
float sg_Geometry_CalculateAngle(float x1, float y1, float x2, float y2);
float sg_Geometry_CalculateAngleBetween(point2d *pt1, point2d *pt2);
float sg_Geometry_CalculateAngleBetweenSprites(void *s1, void *s2);
float sg_Geometry_CalculateAngleBetweenVectors(vector *v1, vector *v2);
circle sg_Geometry_CircleAt(point2d *pt, int radius);
point2d sg_Geometry_CircleCenterPoint(circle *c);
circle sg_Geometry_CircleFromXY(float x, float y, int radius);
shape_prototype sg_Geometry_CirclePrototypeFrom(point2d *pt, float r);
int sg_Geometry_CircleRadius(circle *c);
int sg_Geometry_CircleWithinRect(circle *c, rectangle *rect);
float sg_Geometry_CircleX(circle *c);
float sg_Geometry_CircleY(circle *c);
point2d sg_Geometry_ClosestPointOnCircle(point2d *fromPt, circle *c);