ScreenSaver/lib/sgsdk.pas

    
    try
      result := sgCore.SaturationOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_SaturationOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_SaturationOf');
    {$ENDIF}
  end;
  
  function sg_Core_ScreenHeight(): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ScreenHeight');
    {$ENDIF}
    
    try
      result := sgCore.ScreenHeight();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ScreenHeight');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ScreenHeight');
    {$ENDIF}
  end;
  
  function sg_Core_ScreenWidth(): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ScreenWidth');
    {$ENDIF}
    
    try
      result := sgCore.ScreenWidth();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ScreenWidth');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ScreenWidth');
    {$ENDIF}
  end;
  
  procedure sg_Core_SetIcon(filename: PChar); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_SetIcon');
    {$ENDIF}
  
    try 
      sgCore.SetIcon(filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_SetIcon');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_SetIcon');
    {$ENDIF}
  end;
  
  procedure sg_Core_SwinGameVersion(result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_SwinGameVersion');
    {$ENDIF}
    
    try
      result_temp := sgCore.SwinGameVersion();
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_SwinGameVersion');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_SwinGameVersion');
    {$ENDIF}
  end;
  
  procedure sg_Core_TakeScreenshot(basename: PChar); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_TakeScreenshot');
    {$ENDIF}
  
    try 
      sgCore.TakeScreenshot(basename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_TakeScreenshot');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_TakeScreenshot');
    {$ENDIF}
  end;
  
  procedure sg_Core_ToggleFullScreen(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ToggleFullScreen');
    {$ENDIF}
  
    try 
      sgCore.ToggleFullScreen();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ToggleFullScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ToggleFullScreen');
    {$ENDIF}
  end;
  
  procedure sg_Core_ToggleWindowBorder(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ToggleWindowBorder');
    {$ENDIF}
  
    try 
      sgCore.ToggleWindowBorder();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ToggleWindowBorder');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ToggleWindowBorder');
    {$ENDIF}
  end;
  
  function sg_Core_TransparencyOf(c: LongWord): Byte; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_TransparencyOf');
    {$ENDIF}
    
    try
      result := sgCore.TransparencyOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_TransparencyOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_TransparencyOf');
    {$ENDIF}
  end;
  
  function sg_Core_WindowCloseRequested(): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_WindowCloseRequested');
    {$ENDIF}
    
    try
      result := sgCore.WindowCloseRequested();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_WindowCloseRequested');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_WindowCloseRequested');
    {$ENDIF}
  end;
  
  function sg_Geometry_AddVectors(var v1: Vector; var v2: Vector): Vector; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_AddVectors');
    {$ENDIF}
    
    try
      result := sgGeometry.AddVectors(v1, v2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_AddVectors');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_AddVectors');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_ApplyMatrix(m: SinglePtr; tri: Point2DPtr); cdecl; export;
    var
      m_temp: Matrix2D;
      tri_temp: Triangle;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ApplyMatrix');
    {$ENDIF}
  
    try 
        MatrixCopyFromPtr(m_temp, m);
        TriCopyFromPtr(tri_temp, tri);
      sgGeometry.ApplyMatrix(m_temp, tri_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ApplyMatrix');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ApplyMatrix');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_ApplyMatrixToPoints(m: SinglePtr; pts: Point2DPtr; pts_len: LongInt); cdecl; export;
    var
      m_temp: Matrix2D;
      pts_temp: Point2DArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ApplyMatrixToPoints');
    {$ENDIF}
  
    try 
        MatrixCopyFromPtr(m_temp, m);
        Point2DCopyFromPtr(pts, pts_len, pts_temp);
      sgGeometry.ApplyMatrix(m_temp, pts_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ApplyMatrixToPoints');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ApplyMatrixToPoints');
    {$ENDIF}
  end;
  
  function sg_Geometry_CalculateAngle(x1: Single; y1: Single; x2: Single; y2: Single): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CalculateAngle');
    {$ENDIF}
    
    try
      result := sgGeometry.CalculateAngle(x1, y1, x2, y2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CalculateAngle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CalculateAngle');
    {$ENDIF}
  end;
  
  function sg_Geometry_CalculateAngleBetween(var pt1: Point2D; var pt2: Point2D): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CalculateAngleBetween');
    {$ENDIF}
    
    try
      result := sgGeometry.CalculateAngleBetween(pt1, pt2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CalculateAngleBetween');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CalculateAngleBetween');
    {$ENDIF}
  end;
  
  function sg_Geometry_CalculateAngleBetweenSprites(s1: Sprite; s2: Sprite): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CalculateAngleBetweenSprites');
    {$ENDIF}
    
    try
      result := sgGeometry.CalculateAngle(s1, s2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CalculateAngleBetweenSprites');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CalculateAngleBetweenSprites');
    {$ENDIF}
  end;
  
  function sg_Geometry_CalculateAngleBetweenVectors(var v1: Vector; var v2: Vector): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CalculateAngleBetweenVectors');
    {$ENDIF}
    
    try
      result := sgGeometry.CalculateAngle(v1, v2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CalculateAngleBetweenVectors');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CalculateAngleBetweenVectors');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleAt(var pt: Point2D; radius: LongInt): Circle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleAt');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleAt(pt, radius);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleAt');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleAt');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleCenterPoint(var c: Circle): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleCenterPoint');
    {$ENDIF}
    
    try
      result := sgGeometry.CenterPoint(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleCenterPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleCenterPoint');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleFromXY(x: Single; y: Single; radius: LongInt): Circle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleFromXY');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleAt(x, y, radius);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleFromXY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleFromXY');
    {$ENDIF}
  end;
  
  function sg_Geometry_CirclePrototypeFrom(var pt: Point2D; r: Single): ShapePrototype; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CirclePrototypeFrom');
    {$ENDIF}
    
    try
      result := sgGeometry.CirclePrototypeFrom(pt, r);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CirclePrototypeFrom');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CirclePrototypeFrom');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleRadius(var c: Circle): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleRadius');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleRadius(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleRadius');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleRadius');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleWithinRect(var c: Circle; var rect: Rectangle): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleWithinRect');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleWithinRect(c, rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleWithinRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleWithinRect');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleX(var c: Circle): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleX');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleX(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleX');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleX');
    {$ENDIF}
  end;
  
  function sg_Geometry_CircleY(var c: Circle): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_CircleY');
    {$ENDIF}
    
    try
      result := sgGeometry.CircleY(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_CircleY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_CircleY');
    {$ENDIF}
  end;
  
  function sg_Geometry_ClosestPointOnCircle(var fromPt: Point2D; var c: Circle): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnCircle');
    {$ENDIF}
    
    try
      result := sgGeometry.ClosestPointOnCircle(fromPt, c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnCircle');
    {$ENDIF}
  end;
